[gd_scene load_steps=8 format=3 uid="uid://btxve5nqpfjpu"]

[ext_resource type="AudioStream" uid="uid://cjylluoxyv621" path="res://audio/IslandFightReverse.wav" id="1"]
[ext_resource type="AudioStream" uid="uid://dd6idsba0npkr" path="res://audio/TickingClockFX.wav" id="2"]
[ext_resource type="AudioStream" uid="uid://c7a8doit8tsgj" path="res://audio/Begin_Rewind_FX.wav" id="3"]
[ext_resource type="AudioStream" uid="uid://duns6e54edl5w" path="res://audio/IslandFight.wav" id="4"]
[ext_resource type="AudioStream" uid="uid://bamohdp0xqxfo" path="res://audio/Ending_Rewind_FX.wav" id="5"]
[ext_resource type="Script" path="res://scripts/MusicHandler.gd" id="6"]
[ext_resource type="Texture2D" uid="uid://cvroauv6cgwf7" path="res://art/placeholder.jpg" id="7"]

[node name="MusicHandler" type="Node2D"]
script = ExtResource("6")

[node name="normalMusicLoop" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4")
volume_db = -10.0

[node name="reverseMusicLoop" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1")
volume_db = -10.0

[node name="tickingClockFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2")

[node name="reverseStartFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3")
volume_db = -15.0

[node name="reverseEndFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5")
volume_db = -15.0

[node name="stopEndFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5")
volume_db = -15.0

[node name="speedEndFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5")
volume_db = -15.0

[node name="slowEndFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5")
volume_db = -15.0

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.05, 0.05)
texture = ExtResource("7")

[node name="stopTimeEndFXTimer" type="Timer" parent="."]
one_shot = true

[node name="reverseTimeEndFXTimer" type="Timer" parent="."]
one_shot = true

[node name="speedTimeEndFXTimer" type="Timer" parent="."]
one_shot = true

[node name="slowTimeEndFXTimer" type="Timer" parent="."]
one_shot = true

[connection signal="finished" from="normalMusicLoop" to="." method="_on_normalMusicLoop_finished"]
[connection signal="finished" from="reverseMusicLoop" to="." method="_on_reverseMusicLoop_finished"]
[connection signal="finished" from="tickingClockFX" to="." method="_on_tickingClockFX_finished"]
[connection signal="finished" from="reverseStartFX" to="." method="_on_reverseStartFX_finished"]
[connection signal="finished" from="reverseEndFX" to="." method="_on_reverseEndFX_finished"]
[connection signal="finished" from="stopEndFX" to="." method="_on_stopEndFX_finished"]
[connection signal="finished" from="speedEndFX" to="." method="_on_speedEndFX_finished"]
[connection signal="finished" from="slowEndFX" to="." method="_on_slowEndFX_finished"]
[connection signal="timeout" from="stopTimeEndFXTimer" to="." method="_on_stopTimeEndFXTimer_timeout"]
[connection signal="timeout" from="reverseTimeEndFXTimer" to="." method="_on_reverseTimeEndFXTimer_timeout"]
[connection signal="timeout" from="speedTimeEndFXTimer" to="." method="_on_speedTimeEndFXTimer_timeout"]
[connection signal="timeout" from="slowTimeEndFXTimer" to="." method="_on_slowTimeEndFXTimer_timeout"]
